// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  callToAction="ATUALIZAR PERFIL"
  handleSubmit={[Function]}
  onSubmit={[Function]}
  title="Editar perfil"
  updateError="foo-error"
>
  Dialog - 
  <form
    onSubmit={undefined}
  >
    <div
      label="Nome"
      name="firstName"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Sobrenome"
      name="lastName"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Email"
      name="email"
      type="email"
    >
      Text Field
    </div>
    <div
      label="Sobre você"
      multiline={true}
      name="bio"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Cidade"
      name="city"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Estado"
      name="state"
      type="text"
    >
      Text Field
    </div>
    <div
      label="País"
      name="country"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Empresa / Organização"
      name="company"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Cargo"
      name="workTitle"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Site"
      name="website"
      type="text"
    >
      Text Field
    </div>
    <div
      style={
        Object {
          "padding": 20,
          "textAlign": "center",
        }
      }
    >
      <h5
        className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-colorError-35"
      >
        foo-error
      </h5>
    </div>
  </form>
</div>
`;

exports[`when updating renders correctly 1`] = `
<div
  callToAction="ATUALIZAR PERFIL"
  handleSubmit={[Function]}
  onSubmit={[Function]}
  title="Editar perfil"
  updateError="foo-error"
  updating={true}
>
  Dialog - 
  <form
    onSubmit={undefined}
  >
    <div
      label="Nome"
      name="firstName"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Sobrenome"
      name="lastName"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Email"
      name="email"
      type="email"
    >
      Text Field
    </div>
    <div
      label="Sobre você"
      multiline={true}
      name="bio"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Cidade"
      name="city"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Estado"
      name="state"
      type="text"
    >
      Text Field
    </div>
    <div
      label="País"
      name="country"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Empresa / Organização"
      name="company"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Cargo"
      name="workTitle"
      type="text"
    >
      Text Field
    </div>
    <div
      label="Site"
      name="website"
      type="text"
    >
      Text Field
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <div
        className="MuiCircularProgress-root-36 MuiCircularProgress-colorPrimary-39 MuiCircularProgress-indeterminate-38"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-41"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-42 MuiCircularProgress-circleIndeterminate-44"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      style={
        Object {
          "padding": 20,
          "textAlign": "center",
        }
      }
    >
      <h5
        className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-colorError-35"
      >
        foo-error
      </h5>
    </div>
  </form>
</div>
`;
